<resources>
    <string name="appName">QR Code Scan</string>
    <string name="txtSkip">Skip</string>
    <string name="txtStart">Start</string>
    <string name="intro_slide_title_1">Scan QR Code or BarCode</string>
    <string name="intro_slide_title_2">View QR Code or BarCode</string>
    <string name="intro_slide_title_3">Select type</string>
    <string name="intro_slide_title_4">Create QR Code or Barcode</string>
    <string name="intro_slide_detail_1">To scan the QR code or Barcode, simply point to QR or barcode you want to scan and app will automatically detect and recognise it.</string>
    <string name="intro_slide_detail_2">Depending on the formats of code scanned, QR code scanner will prompt to take appropriate action.</string>
    <string name="intro_slide_detail_3">To create QR or Barcode select any one type from Text, mobile number, email, sms, VCard, WiFi, event, website, EAN-13, EAN-8, UPC-E, Code 39, Code 128, UPC-A</string>
    <string name="intro_slide_detail_4">Fill relevant details for selected QR or Barcode type, press done. It will generate QR Or Barcode which you can share with various platforms.</string>
    <string name="txtAppNameCreate">Created codes</string>
    <string name="txtPlaceHolderCreate">You haven\'t created any codes yet.</string>
    <string name="txtAppNameCreateQCR">QR-Code</string>
    <string name="txtAppNameCreateBCR">Barcode</string>
    <string name="txtBarCode">Search barcode</string>
    <string name="txtText">Search text</string>
    <string name="txtCall">Call phone number</string>
    <string name="txtSMS">Open SMS composer</string>
    <string name="txtEmail">Open mail composer</string>
    <string name="txtURL">Open URL in google</string>
    <string name="txtDirection">Show location</string>
    <string name="txtWIFI">Copy password</string>
    <string name="txtContact">Add new contact</string>
    <string name="txtEvent">Add event</string>
    <string name="txtFacebook">Open in facebook</string>
    <string name="txtInstagram">Open in instagram</string>
    <string name="txtWhatsApp">Open in whatsapp</string>
    <string name="txtTwitter">Open in twitter</string>
    <string name="txtLinkedIn">Open in linkedin</string>
    <string name="txtSnapChat">Open in snapchat</string>
    <string name="txtMap">Show map</string>
    <string name="txtProduct">Search product</string>
    <string name="txtAmazon">Search amazon</string>
    <string name="txtBook">Search book</string>
    <string name="txtContent">Search content</string>
    <string name="txtConnect">Connect</string>
    <string name="txtMMS">Send MMS</string>
    <string name="txtShopper">Google shopper</string>
    <string name="txtWalMart">WalMart</string>
    <string name="txtOpen">Open</string>
    <string name="txtShare">Share</string>
    <string name="txtAppNameHistory">History</string>
    <string name="txtPlaceHolderHistory">You haven\'t scanned anything yet.</string>
    <string name="txtDelete">Delete</string>
    <string name="txtAppNameSetting">Setting</string>
    <string name="txtVibrate">Vibrate</string>
    <string name="txtVibrateDesc">Vibrate if scan is successful.</string>
    <string name="txtBeep">Beep</string>
    <string name="txtBeepDesc">Beep if scan is successful.</string>
    <string name="txtTheme">Theme</string>
    <string name="txtThemeDesc">Here you can change app theme</string>
    <string name="txtShareApp">Here you can check more apps</string>
    <string name="txtLanguage">Language</string>
    <string name="txtApp">More apps</string>
    <string name="txtLanguageDesc">Here you can change app language</string>
    <string name="txtHelp">How to use?</string>
    <string name="txtPrivacy">Privacy policy</string>
    <string name="txtRateUs">Rate us</string>
    <string name="txtMoreApp">More apps</string>
    <string name="txtAppNameTheme">Theme</string>
    <string name="colorNameIndigo">Indigo</string>
    <string name="colorNameRed">Red</string>
    <string name="colorNamePurple">Purple</string>
    <string name="colorNameDeepPurple">Deep Purple</string>
    <string name="colorNameElectricPurple">Electric Purple</string>
    <string name="colorNameCyan">Cyan</string>
    <string name="colorNameGreen">Green</string>
    <string name="colorNameBrown">Brown</string>
    <string name="colorNameBlueGray">Blue Gray</string>
    <string name="txtAppNameLanguage">Language</string>
    <string name="navScan">Scan</string>
    <string name="navCreate">Create</string>
    <string name="navHistory">History</string>
    <string name="navSetting">Setting</string>
    <string name="qrCodeSection">QR-Code</string>
    <string name="barCodeSection">Barcode</string>
    <string name="qrCodeText">Text</string>
    <string name="qrCodeNumber">Number</string>
    <string name="qrCodeSms">SMS</string>
    <string name="qrCodeEmail">Email</string>
    <string name="qrCodeWebSite">Website</string>
    <string name="qrCodeLocation">Location</string>
    <string name="qrCodeWifi">Wifi</string>
    <string name="qrCodeVCard">VCard</string>
    <string name="qrCodeEvent">Event</string>
    <string name="qrCodeFacebook">Facebook</string>
    <string name="qrCodeInstagram">Instagram</string>
    <string name="qrCodeWhatsApp">Whatsapp</string>
    <string name="qrCodeTwitter">Twitter</string>
    <string name="qrCodeLinkedIn">Linked in</string>
    <string name="qrCodeSnapChat">Snapchat</string>
    <string name="barCodeEan13">EAN-13</string>
    <string name="barCodeEan8">EAN-8</string>
    <string name="barCodeUpce">UPC-E</string>
    <string name="barCodeCode39">Code 39</string>
    <string name="barCodeCode128">Code 128</string>
    <string name="barCodeUpca">UPC-A</string>
    <string name="txtAppNameText">Text message</string>
    <string name="txtAppNamePhoneNum">Phone number</string>
    <string name="txtAppNameSms">Text message</string>
    <string name="txtAppNameEmail">Email</string>
    <string name="txtAppNameWebSite">Website</string>
    <string name="txtAppNameLocation">Location</string>
    <string name="txtAppNameWifi">Wifi</string>
    <string name="txtAppNameVCard">VCard</string>
    <string name="txtAppNameEvent">Event</string>
    <string name="txtAppNameFacebook">Facebook</string>
    <string name="txtAppNameInstagram">Instagram</string>
    <string name="txtAppNameWhatsApp">Whatsapp</string>
    <string name="txtAppNameTwitter">Twitter</string>
    <string name="txtAppNameLinkedIn">Linked in</string>
    <string name="txtAppNameSnapChat">Snapchat</string>
    <string name="txtAppNameBarCode">Barcode</string>
    <string name="txtProductName">Product</string>
    <string name="txtTextName">Text</string>
    <string name="txtPhoneNumName">Phone number</string>
    <string name="txtSmsName">SMS</string>
    <string name="txtEmailName">Email</string>
    <string name="txtWebSiteName">Website</string>
    <string name="txtLocationName">Location</string>
    <string name="txtWifiName">Wifi</string>
    <string name="txtVCardName">VCard</string>
    <string name="txtEventName">Event</string>
    <string name="txtFacebookName">Facebook</string>
    <string name="txtInstagramName">Instagram</string>
    <string name="txtWhatsAppName">Whatsapp</string>
    <string name="txtTwitterName">Twitter</string>
    <string name="txtLinkedInName">Linked in</string>
    <string name="txtSnapChatName">Snapchat</string>
    <string name="txtEan13Name">EAN-13</string>
    <string name="txtEan8Name">EAN-8</string>
    <string name="txtUpceName">UPC-E</string>
    <string name="txtCode39Name">CODE 39</string>
    <string name="txtCode128Name">CODE 128</string>
    <string name="txtUpcaName">UPC-A</string>
    <string name="txtQrCodeMessageName">Enter your message</string>
    <string name="txtQrCodePhoneNumName">Enter phone number</string>
    <string name="txtQrCodeSmsName">Enter your message</string>
    <string name="txtQrCodeEmailIdName">Enter email id</string>
    <string name="txtQrCodeSubjectName">Enter subject</string>
    <string name="txtQrCodeBodyName">Enter body</string>
    <string name="txtQrCodeWebSiteName">Enter URL address</string>
    <string name="txtQrCodeLatitudeName">Enter latitude</string>
    <string name="txtQrCodeLongitudeName">Enter longitude</string>
    <string name="txtQrCodeEncryptionName">Encryption</string>
    <string name="txtQrCodeWpaWpa2Name">wpa/wpa2</string>
    <string name="txtQrCodeWepName">Wep</string>
    <string name="txtQrCodeNoEncryptionName">No encryption</string>
    <string name="txtQrCodeNetworkName">Network</string>
    <string name="txtQrCodePasswordName">Password</string>
    <string name="txtQrCodeNameName">Enter name</string>
    <string name="txtQrCodeCityName">Enter city</string>
    <string name="txtQrCodeCompanyName">Enter company name</string>
    <string name="txtQrCodeTitleName">Enter title</string>
    <string name="txtQrCodeLocationName">Enter location</string>
    <string name="txtQrCodeAllDayName">All day</string>
    <string name="txtQrCodeBeginDateName">Begin date</string>
    <string name="txtQrCodeEndDateName">End date</string>
    <string name="txtQrCodeFacebookName">Facebook</string>
    <string name="txtQrCodeInstagramName">Instagram</string>
    <string name="txtQrCodeWhatsAppName">Whatsapp</string>
    <string name="txtQrCodeTwitterName">Twitter</string>
    <string name="txtQrCodeLinkedInName">Linked in</string>
    <string name="txtQrCodeSnapChatName">Snapchat</string>
    <string name="txtQrCodeName">QR-Code</string>
    <string name="txtBarCodeName">Barcode</string>
    <string name="msgDeleteContent">Are you sure you want to clear all history ?</string>
    <string name="msgYes">Yes</string>
    <string name="msgNo">No</string>
    <string name="msgCsvContent">You haven\'t scanned anything yet.</string>
    <string name="msgOkay">Okay</string>
    <string name="msgQrCodeText">Please enter text message</string>
    <string name="msgQrCodePhoneNum">Please enter valid phone number</string>
    <string name="msgQrCodeSms">Please enter SMS message</string>
    <string name="msgQrCodeValidPhoneNum">Please enter valid phone number</string>
    <string name="msgQrCodeValidEmail">Please enter email id</string>
    <string name="msgQrCodeValidEmailSubject">Please enter subject</string>
    <string name="msgQrCodeValidEmailBody">Please enter email text</string>
    <string name="msgQrCodeValidEmailId">Please enter valid email id</string>
    <string name="msgQrCodeWebSite">Please enter URL</string>
    <string name="msgQrCodeValidWebSite">Please enter valid URL</string>
    <string name="msgQrCodeLatitude">Please enter latitude</string>
    <string name="msgQrCodeLongitude">Please enter longitude</string>
    <string name="msgQrCodeWifiName">Please enter wifi name</string>
    <string name="msgQrCodeWifiPass">Please enter wifi password</string>
    <string name="msgQrCodeVcardName">Please enter name</string>
    <string name="msgQrCodeVcardCity">Please enter city</string>
    <string name="msgQrCodeVcardCompanyName">Please enter company name</string>
    <string name="msgQrCodeEventTitle">Please enter event title</string>
    <string name="msgQrCodeEventLocation">Please enter event location</string>
    <string name="msgQrCodeEventBDateAndTime">Please select event begin date</string>
    <string name="msgQrCodeEventEDateAndTime">Please select event end date</string>
    <string name="msgQrCodeFacebook">Please enter facebook id</string>
    <string name="msgQrCodeInstagram">Please enter instagram id</string>
    <string name="msgQrCodeWhatsApp">Please enter whatsapp id</string>
    <string name="msgQrCodeTwitter">Please enter twitter id</string>
    <string name="msgQrCodeLinkedIn">Please enter linked in id</string>
    <string name="msgQrCodeSnapChat">Please enter snapchat id</string>
    <string name="msgBarCodeEAN13">EAN-13 requires content to be 13 digits </string>
    <string name="msgBarCodeEAN8">EAN-8 requires content to be 8 digits</string>
</resources>